--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <! DOCTYPE html>
 <html>
-  <head><title>My First WebApp</title>
+  <head>
+    <meta charset="utf-8"/>
+    <meta description="First Web Application"/>
+    <meta author="Prashun"/>
+    <title>My First WebApp</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="main.css" type="text/css">
   </head>
   <body>
     <div class="header">
-     <img src='https://images.unsplash.com/photo-1553999284-3825010ad24e?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ' alt=''>
-      <button href="#" class="btn btn-default">Login</button>
-      <button href="#" class="btn btn-default">SignUp</button>
+      <div class="jumbotron">
+        <button href="#" class="btn btn-default">Login</button>
+        <button href="#" class="btn btn-default">SignUp</button>
+      </div>
       <nav class="navbar navbar-inverse">
         <ul class="nav navbar-nav">
           <li><a href="#">Home</a></li>
@@ -40,13 +45,17 @@
   </form>
     <div class="container">
       <p>Hello Readers!, I am Prashun Chakraborty, currently studying B.tech in Electronics and Communication Engineering in Guru Gobind Singh Indraprastha University. I did my schooling from Mount Carmel School, Dwarka. I have successfully achieved the intermediate knowledge in the following courses:<br>
-        <ul>
-          <li>Python</li>
-          <li>Ruby</li>
-          <li>Html</li>
-          <li>CSS</li>
-          <li>Javascript</li>
-      </ul>While exploring all these stuff which brought up the hidden programmer in me, I realized that web designing and development is the right one for me. I have started my journey in this field and here is what i have done finally after getting some knowledge in this direction.</p>
+        <div class="row">
+          <div class="column">
+            <img src="python-logo-master-v3-TM.png" alt="python" style="width:100%">
+          </div>
+          <div class="column">
+            <img src="ruby-logo_optimized.png" alt="ruby" style="width:100%">
+          </div>
+          <div class="column">
+              <img src="2712780_1.jpg" alt="html,css,js" style="width:100%">
+          </div>
+        </div>While exploring all these stuff which brought up the hidden programmer in me, I realized that web designing and development is the right one for me. I have started my journey in this field and here is what i have done finally after getting some knowledge in this direction.</p>
     </div>
   <footer>
     <h3>Thanks For Visiting My First WebApp!<br><br>&copy;Prashun Chakraborty</h3>
